<resources>
    <string name="app_name" translatable="false">Pilldroid</string>
    <string name="title_drug_detail">Drug Detail</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_about">About Pilldroid</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="msgNotFound">Drug not found in the database</string>
    <string name="msgFound">Drug found in the database</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="notification_text">You have to go to the pharmacy</string>
    <string name="drug_name_label">Name</string>
    <string name="drug_presentation_label">Presentation</string>
    <string name="drug_administrationMode_label">Administration mode</string>
    <string name="drug_current_stock_label">Current stock</string>
    <string name="drug_take_label">Take</string>
    <string name="drug_warningThreshold_label">Alert threshold</string>
    <string name="drug_alertThreshold_label">Critical threshold</string>
    <string name="button_keyboard">"Use the keyboard"</string>
    <string name="detail_view">Detail view</string>
    <string name="save">Save</string>
    <string name="flashlightButton">Toggle Flash</string>
    <string name="enter_code_here">Enter CIP 13, CIP 7 or CIS here..</string>
    <string name="enter_code">Enter CIP 13, CIP 7 or CIS </string>
    <string name="close">Close</string>
    <string name="scan_label">Aim at the barcode to scan it</string>

    <!-- slides strings -->
    <string name="slide1_Pilldroid">Welcome on Pilldroid</string>
    <string name="slide1_desc">The theoretical Pill Stock Manager</string>
    <string name="slide2_Pilldroid">To add a med, tap on the "Plus" button</string>
    <string name="slide2_desc">You\'ll add a drug to the database</string>
    <string name="slide3_Pilldroid">You can scan classic barcode</string>
    <string name="slide3_desc">called CIP13</string>
    <string name="slide4_Pilldroid">Or QRCode</string>
    <string name="slide5_Pilldroid">Green background, happy face</string>
    <string name="slide6_Pilldroid">Orange background, neutral face</string>
    <string name="slide7_Pilldroid">Red background, unhappy face</string>
    <string name="slide9_Pilldroid">Tunable</string>
    <string name="slide8_Pilldroid">Info</string>
    <string name="slide10_Pilldroid">Treatment suspended</string>
    <string name="slide11_Pilldroid">save icon</string>
    <string name="slide12_Pilldroid">Thanks</string>
    <string name="pilldroid_icon">Pilldroid Icon</string>
    <string name="the_plus_icon">The plus icon</string>
    <string name="slide4_desc">In order to find the CIP13</string>
    <string name="happy_face">Happy face</string>
    <string name="barcode_icon">Bar code icon</string>
    <string name="qr_code_icon">qr-code icon</string>
    <string name="neutral_face">neutral face</string>
    <string name="unhappy_face">unhappy face</string>
    <string name="drug_info">Drug info screenshot</string>
    <string name="tunable">Tunable</string>
    <string name="slide10_desc">Take to 0 to suspend treatment</string>
    <string name="suspended_treatment_icon">Treatment suspended icon</string>
    <string name="slide11_desc">To save changes</string>
    <string name="save_icon">The save icon</string>
    <string name="slide12_desc">Thanks for using PillDroid</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="zero" translatable="false">0</string>
    <string name="add_button">Add new drug in list</string>
    <string name="stockIcon">Stock Icon</string>
    <string name="Date">Monday January 1st 2001</string>
    <string name="Value">Value</string>
    <string name="label">Label</string>
    <string name="drug_list">Drug\'s attributes</string>
    <string name="notInterpreted">Bar code cannot be interpreted</string>
    <string name="cancelled_scan">Scan canceled</string>
    <string name="missing_camera_permission">Missing camera permission</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="understood">I understood that the developer of Pilldroid cannot be responsible of your medication management.\n It\'s you own responsibility.</string>
    <string name="Undo">Undo</string>
    <string name="trash_icon">Trash icon</string>
    <string name="addInList">Add to your list of medicine?</string>
    <string name="drug_deleted">Drug deleted</string>
    <string name="permission_denied">Permission is not allowed</string>
    <string name="edit">Edit</string>
    <string name="schedule_option">Our app requires enabling the option to allow planning schedules; do you want to open settings?</string>
    <string name="code">Source code</string>
</resources>
