<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_centerInParent="true"
  android:gravity="center"
  android:orientation="vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="@dimen/img_width_height"
        android:layout_height="@dimen/img_width_height"
        android:contentDescription="@string/suspended_treatment_icon"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_suspended_pill"
        app:tint="@color/colorPrimary"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/slide10_Pilldroid"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="@dimen/desc_padding"
        android:paddingEnd="@dimen/desc_padding"
        android:text="@string/slide10_desc"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
</LinearLayout>
