<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="80dp"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="horizontal"
  android:layout_marginBottom="1dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/list_image"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_gravity="center|start"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/stockIcon"
            app:srcCompat="@drawable/ic_sentiment_satisfied" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="52dp"
            android:layout_gravity="center"
            android:text="Drug name"
            android:textColor="#040404"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/endOfStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="bottom|end"
            android:text="@string/Date"
            android:textColor="#212121"
            android:textSize="14sp"
            android:textStyle="bold" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/detail_view"
        app:srcCompat="@drawable/ic_navigate_next" />

</androidx.cardview.widget.CardView>
