<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:backgroundTint="@color/cardview_shadow_start_color"
    android:fitsSystemWindows="true"
    tools:context="net.foucry.pilldroid.DrugDetailActivity"
    tools:ignore="MergeRootFrame">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="#0000"
            app:layout_scrollFlags="scroll|exitUntilCollapsed" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_collapseMode="pin"
            app:titleTextColor="@color/white"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/edit"/>
</com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/drug_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/drug_list"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:layout_gravity="center|bottom"
        android:scaleType="center"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/save"
        android:text="@string/save"
        android:textColor="@color/white"
        app:icon="@drawable/ic_save"
        app:backgroundTint="@color/colorPrimary"
        app:iconTint="@color/white"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
